Attempt to fix time wrapping issue on certain systems (Mac 10.6, Korean).

--- a/Elegant Simple.AdiumMessageStyle/Contents/Resources/main.css
+++ b/Elegant Simple.AdiumMessageStyle/Contents/Resources/main.css
@@ -94,6 +94,7 @@ span.time {
 }
 
 span.timeC, div.status span.time {
+	clear: both;
 	display: block;
 	float: right;
 	padding-top: 6px;
